build_log_debug.txt
[DEBUG build_start] Build function started (session: A)
[DEBUG target_optimize_setup] Target and optimize options set (session: A)
[DEBUG build_complete] Build function completed successfully (session: A)
install
+- install nyon_editor
   +- compile exe nyon_editor Debug native 2 errors
src\editor\main_editor.zig:971:43: error: root source file struct 'ecs.ecs' has no member named 'Transform'
            const transform = data.get(ecs.Transform).?;
                                       ~~~^~~~~~~~~~
src\ecs\ecs.zig:1:1: note: struct declared here
//! Entity Component System (ECS) - Main module re-export
^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
referenced by:
    renderSceneEditor: src\editor\main_editor.zig:540:35
    render: src\editor\main_editor.zig:321:56
    5 reference(s) hidden; use '-freference-trace=7' to see all references
src\scene.zig:145:56: error: root source file struct 'raylib_stub' has no member named 'getRayCollisionMesh'
                            var mesh_collision = raylib.getRayCollisionMesh(ray, mesh, mesh_transform);
                                                 ~~~~~~^~~~~~~~~~~~~~~~~~~~
src\raylib_stub.zig:1:1: note: struct declared here
const std = @import("std");
^~~~~
error: 2 compilation errors
failed command: "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\zig.exe" build-exe -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mroot=C:\\Users\\donald\\nyon-game\\src\\editor.zig" "-Mraygui=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" "-Mzglfw=C:\\Users\\donald\\nyon-game\\src\\raylib_stub.zig" -ODebug --dep raylib=raygui --dep raygui --dep zglfw --dep nyon_game "-Mnyon_game=C:\\Users\\donald\\nyon-game\\src\\root.zig" -lc --cache-dir .zig-cache --global-cache-dir "C:\\Users\\donald\\AppData\\Local\\zig" --name nyon_editor --zig-lib-dir "C:\\Users\\donald\\AppData\\Roaming\\Antigravity\\User\\globalStorage\\ziglang.vscode-zig\\zig\\x86_64-windows-0.16.0-dev.1892+53ebfde6b\\lib\\" --listen=-

Build Summary: 2/5 steps succeeded (1 failed)
install transitive failure
+- install nyon_editor transitive failure
   +- compile exe nyon_editor Debug native 2 errors

error: the following build command failed with exit code 1:
.zig-cache\o\92f2af8c2753723feeadd90abb19e800\build.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\zig.exe C:\Users\donald\AppData\Roaming\Antigravity\User\globalStorage\ziglang.vscode-zig\zig\x86_64-windows-0.16.0-dev.1892+53ebfde6b\lib C:\Users\donald\nyon-game .zig-cache C:\Users\donald\AppData\Local\zig --seed 0x8dd4d58b -Za30328ee9aea2aec
